syntax = "proto3";

package store;

option go_package="storepb";

message AddCsvRequest {
    string key = 1;
    string value = 2;
}

message AddCsvResponse {
    string result = 1;
}

message RemoveCsvRequest {
    string key = 1;
    string value = 2;
}

message RemoveCsvResponse {
    string result = 1;
}

message GetvCsvRequest {
    string key = 1;
}

message GetvCsvResponse {
    string result = 1;
}

message GetkCsvRequest {
    string value = 2;
}

message GetkCsvResponse {
    string result = 1;
}

message RemoveAllCsvRequest {
    string msg = 1;
}

message RemoveAllCsvResponse {
    string result = 1;
}

message AddCsvFromFileRequest {
    string key = 1;
    string value = 2;
}
message AddCsvFromFileResponse {
    string result = 1;
}

message RemoveCsvFromFileRequest {
    string key = 1;
    string value = 2;
}

message RemoveCsvFromFileResponse {
    string result = 1;
}

message GetAllCsvRequest {
    string msg = 1;
}

message GetAllCsvResponse {
    string key = 1;
    string value = 2;
}

message UseCsvRequest {
    string msg = 1;
}

message UseCsvResponse {
    string result = 1;
}

service StoreService {
    // Unary
    rpc AddCsv(AddCsvRequest) returns (AddCsvResponse) {};
    rpc RemoveCsv(RemoveCsvRequest) returns (RemoveCsvResponse) {};
    rpc GetvCsv(GetvCsvRequest) returns (GetvCsvResponse) {};
    rpc GetkCsv(GetkCsvRequest) returns (GetkCsvResponse) {};
    rpc RemoveAllCsv(RemoveAllCsvRequest) returns (RemoveAllCsvResponse) {};
    rpc UseCsv(UseCsvRequest) returns (UseCsvResponse) {};
    // client streaming
    rpc AddCsvFromFile(stream AddCsvFromFileRequest) returns (AddCsvFromFileResponse) {};
    rpc RemoveCsvFromFile(stream RemoveCsvFromFileRequest) returns (RemoveCsvFromFileResponse) {};
    // server streaming
    rpc GetAllCsv(GetAllCsvRequest) returns (stream GetAllCsvResponse) {};
}


message Data {
    string key = 1;
    string value = 2;
}
message AddDbRequest {
    Data data = 1;
}

message AddDbResponse {
    string result = 1;
}

message UseDbRequest {
    string msg = 1;
}
message UseDbResponse {
    string result = 1;
}

message RemoveDbRequest {
    string key = 1;
    string value = 2;
}

message RemoveDbResponse {
    string result = 1;
}

message GetvDbRequest {
    string key = 1;
}

message GetvDbResponse {
    string result = 1;
}

message GetkDbRequest {
    string value = 1;
}

message GetkDbResponse {
    string result = 1;
}

service StoreDbService {
    rpc AddDb(AddDbRequest) returns (AddDbResponse) {};
    rpc GetvDb(GetvDbRequest) returns (GetvDbResponse) {};
    rpc GetkDb(GetkDbRequest) returns (GetkDbResponse) {};
    rpc RemoveDb(RemoveDbRequest) returns (RemoveDbResponse) {};
    rpc UseDb(UseDbRequest) returns (UseDbResponse) {};
}